# ARBITPRO-BOT-Official

./: .env  .env.example  Dockerfile  Procfile  README.md  config.py  filters.json  main.py  pro_users.json  pyproject.toml  requirements-dev.txt  requirements.txt
CI/CD (.github/: python-app.yml)
aiogram/: __init__.py  filters.py  types.py
aiogram/fsm/: __init__.py  context.py  state.py
aiogram/fsm/storage/: __init__.py  memory.py
aiohttp/: __init__.py
config/: __init__.py  config.py  db.py
handlers/: arbitrage_dynamic.py  calc.py  calculator.py  default  default.py  filter_engine.py  filters.json  filters.py  history.py  payment.py  referral.py  set_filter_trigger.py  settings.py
models/: __init__.py  user_setting.py
services/: aggregator.py  arb_engine.py  const.py  filter_engine  filter_engine.py  notifier.py  p2p_fetcher.py  rate_fetcher.py
tests/: test_aggregator.py  test_aiogram_stubs.py  test_filter_engine.py  test_history.py  test_volume_parsing.py
utils/: .gitignore  logger
