[tool.poetry]
name = "arbitpro-bot"
version = "0.1.0"
description = "Telegram bot for P2P & exchange arbitrage"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0"
aiohttp = "^3.8"
poetry = { extras = ["dotenv"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
